--- a/css/styles.css
+++ b/css/styles.css
@@ -34,5 +34,6 @@ aside{
     background-color: rgba(200, 33, 117, 0.8);
     padding: 5px;
     width: 230px;
-    float: left;
+    height: 500px;
+    float: middle;
 }
