--- a/css/styles.css
+++ b/css/styles.css
@@ -1,10 +1,15 @@
+header, section, aside, nav, article{
+    display: block;}
 body{
     background-color: papayawhip;
     color: blue;
     padding: 20px;
     font-family: fantasy;}
+header{
+    height:160px;
+    background-color: #66cdaa;}
 h1{
-    background-color: #66cdaa;
+    
     color:rgb(100, 0, 65);
     font-size: large;
     text-align: center;
