--- a/css/styles.css
+++ b/css/styles.css
@@ -12,7 +12,7 @@ h1{
     
     color:rgb(100, 0, 65);
     font-size:xx-large;
-    text-align: center;
+    text-align: left;
     width: 940px;
     height: 130px;
     padding: inherit;}
