--- a/css/styles.css
+++ b/css/styles.css
@@ -5,6 +5,11 @@ body{
     color: blue;
     padding: 20px;
     font-family: fantasy;}
+.wrapper{
+    width:940px;
+    margin: 20px auto 20px auto;
+    border:2px solid #000000;
+    background-color: #ffffff;}
 header{
     height:160px;
     background-color: #66cdaa;}
