--- a/css/styles.css
+++ b/css/styles.css
@@ -14,12 +14,11 @@ header{
     height:160px;
     background-color: #66cdaa;}
 h1{
-    
     color:rgb(100, 0, 65);
     font-size:xx-large;
-    text-align: middle;
+    text-align: center;
     width: 940px;
-    height: 110px;
+    height: 80px;
     padding: inherit;}
 nav{
     clear: both;
@@ -31,8 +30,8 @@ p{
     padding:10px;
     margin:5px;
     display:block;
-    width:500px;
-    height:230px;}
+    width:800px;
+    height:100px;}
 p.first{
     background-color: hlsa(330, 100%, 100%, 0.5);
     background-color: rgb(86, 203, 19);
@@ -44,12 +43,12 @@ p.second{
     font-size: larger;
 }
 p.third{
-    background-color: inherit;
+    background-color: rgba(200, 55, 33, 0.8);
 }
 aside{
     background-color: rgba(200, 33, 117, 0.8);
     padding: 5px;
     width: 230px;
     height: 500px;
-    float: middle;
+    position: absolute;
 }
