--- a/css/styles.css
+++ b/css/styles.css
@@ -5,11 +5,11 @@ body{
     color: blue;
     padding: 20px;
     font-family: fantasy;}
-.wrapper{
+/*.wrapper{
     width:940px;
     margin: 20px auto 20px auto;
     border:2px solid #000000;
-    background-color: #ffffff;}
+    background-color: #ffffff;}*/
 header{
     height:160px;
     background-color: #66cdaa;}
@@ -17,7 +17,7 @@ h1{
     color:rgb(100, 0, 65);
     font-size:xx-large;
     text-align: center;
-    height: 80px;
+    height: 50px;
     padding: inherit;}
 nav{
     clear: both;
@@ -29,8 +29,8 @@ p{
     padding:10px;
     margin:5px;
     display:block;
-    width:800px;
-    height:100px;}
+    width:1100px;
+    height:120px;}
 p.first{
     background-color: hlsa(330, 100%, 100%, 0.5);
     background-color: rgb(86, 203, 19);
@@ -50,6 +50,6 @@ aside{
     width: 300px;
     height: 450px;
     position: absolute;
-    top:0px;
-    left:900px;
+    top:230px;
+    left:1200px;
 }
