--- a/css/styles.css
+++ b/css/styles.css
@@ -18,19 +18,18 @@ h1{
     background-color: #66cdaa;
     font-size:xx-large;
     text-align: center;
-    height: 100px;
-    padding: inherit;}
+    height: 100px;}
 nav{
     color: #ffffff;
     background-color: #aeaca8;
-    margin-bottom: 20px;
+    margin: 20px;
     height: 60px;}
 p{
     padding:10px;
     margin:5px;
     display:block;
     width:1100px;
-    height:140px;}
+    height:160px;}
 p.first{
     background-color: hlsa(330, 100%, 100%, 0.5);
     background-color: rgb(86, 203, 19);
