--- a/css/styles.css
+++ b/css/styles.css
@@ -12,6 +12,7 @@ body{
     background-color: #ffffff;}*/
 header{
     height:160px;
+    margin: 20px;
     background-color: inherit;}
 h1{
     color:rgb(100, 0, 65);
@@ -23,7 +24,7 @@ nav{
     color: #ffffff;
     background-color: #aeaca8;
     margin: 20px;
-    height: 60px;}
+    height: 40px;}
 p{
     padding:10px;
     margin:5px;
