--- a/css/styles.css
+++ b/css/styles.css
@@ -5,50 +5,54 @@ body{
     color: blue;
     padding: 20px;
     font-family: fantasy;}
-/*.wrapper{
-    width:940px;
-    margin: 20px auto 20px auto;
-    border:2px solid #000000;
-    background-color: #ffffff;}*/
 header{
     height:160px;
-    margin-bottom: 30px;
+    margin-bottom: 10px;
     background-color: inherit;}
 h1{
-    color:rgb(100, 0, 65);
+    color:rgb(168, 27, 27);
     background-color: #66cdaa;
+    background-image: url(https://cdn.pixabay.com/photo/2020/05/21/20/14/birds-5202523_960_720.png);
     font-size:xx-large;
     text-align: center;
-    height: 100px;}
+    height: 40px;
+    padding: 30px;
+    word-spacing:20px;}
 nav{
     color: #ffffff;
     background-color: #aeaca8;
-    height: 40px;}
+    height: 20px;
+    word-spacing: 50px;
+    padding: 10px;
+    }
+a:link{
+    text-decoration: none;
+}
 p{
     padding:10px;
     margin:5px;
-    display:block;
     width:1100px;
-    height:125px;}
-p.first{
+    height:150px;}
+#first{
     background-color: hlsa(330, 100%, 100%, 0.5);
     background-color: rgb(86, 203, 19);
-    font-style: italic  ;
+    font-style: italic;
     opacity: 0.5;
 }
-p.second{
+#second{
     background-color: hsl(180, 50%, 60%);
     font-size: larger;
 }
-p.third{
+#third{
     background-color: rgba(200, 55, 33, 0.8);
 }
 aside{
     background-color: rgba(200, 33, 117, 0.8);
     padding: 5px;
-    width: 200px;
-    height: 438px;
-    position: absolute;
-    top:235px;
-    left:1176px;
+    width: 240px;
+    height: 508px;
+    position: fixed;
+    top:220px;
+    left:1160px;
+
 }
